# c-laboratory

./: .gitignore  CMakeLists.txt  main.c  testc.h
src/: first.c  main.c  testc.h
